[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/interface/themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/TitleScreen/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/roboto_68.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/roboto_50.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/TitleScreen/Lobby.gd" type="Script" id=5]
[ext_resource path="res://assets/interface/lobby_buttons/join.png" type="Texture" id=6]
[ext_resource path="res://assets/interface/lobby_buttons/join_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/interface/lobby_buttons/create.png" type="Texture" id=8]
[ext_resource path="res://assets/interface/lobby_buttons/create_pressed.png" type="Texture" id=9]
[ext_resource path="res://src/TitleScreen/MultiplayerMenu.gd" type="Script" id=10]
[ext_resource path="res://src/TitleScreen/SettingsMenu.gd" type="Script" id=11]
[ext_resource path="res://assets/fonts/roboto/Roboto-Regular.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 12 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -840.0
margin_top = -460.0
margin_right = 840.0
margin_bottom = 460.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 1680.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_y = 5
text = "PROJECT CONFRONTATION"
align = 1

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_top = 91.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="SinglePlayer" type="Button" parent="Menu/Buttons"]
margin_right = 1680.0
margin_bottom = 95.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Un jugador"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Buttons"]
margin_top = 115.0
margin_right = 1680.0
margin_bottom = 210.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Multiplayer" type="Button" parent="Menu/Buttons/HBoxContainer"]
margin_right = 830.0
margin_bottom = 95.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Multijugador"

[node name="OnlinePlay" type="Button" parent="Menu/Buttons/HBoxContainer"]
margin_left = 850.0
margin_right = 1680.0
margin_bottom = 95.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Partida en línia"

[node name="Settings" type="Button" parent="Menu/Buttons"]
margin_top = 230.0
margin_right = 1680.0
margin_bottom = 325.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Configuració"

[node name="Profile" type="Button" parent="Menu/Buttons"]
margin_top = 345.0
margin_right = 1680.0
margin_bottom = 440.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Perfil"

[node name="Quit" type="Button" parent="Menu/Buttons"]
margin_top = 460.0
margin_right = 1680.0
margin_bottom = 555.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Sortir"

[node name="VersionLabel" type="Label" parent="Menu/Buttons"]
margin_top = 575.0
margin_right = 1680.0
margin_bottom = 828.0
text = "
Crèdits:
-Música i Sons: Kevin MacLeod
-Textures: CC0 Textures
-Motor: Godot Engine (godotengine.org/license)

Versió 0.1.6 Alfa
Indev build \"Multijugador\""

[node name="Lobby" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Lobby"]
margin_left = 120.149
margin_top = 80.0
margin_right = 1800.15
margin_bottom = 161.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_y = 5
text = "VESTÍBUL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -190.0
margin_right = 400.0
margin_bottom = 190.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby/VBoxContainer"]
margin_right = 800.0
margin_bottom = 66.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="Lobby/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 250.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 4 )
text = "El teu nom:"

[node name="NameLine" type="LineEdit" parent="Lobby/VBoxContainer/HBoxContainer"]
margin_left = 285.0
margin_right = 800.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
align = 1
max_length = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="Lobby/VBoxContainer"]
margin_top = 96.0
margin_right = 800.0
margin_bottom = 162.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="Lobby/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 317.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 4 )
text = "IP per unir-se:"

[node name="IPLine" type="LineEdit" parent="Lobby/VBoxContainer/HBoxContainer2"]
margin_left = 352.0
margin_right = 800.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
align = 1
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Lobby/VBoxContainer"]
margin_top = 192.0
margin_right = 800.0
margin_bottom = 380.0
size_flags_vertical = 3
custom_constants/separation = 75

[node name="JoinButton" type="TextureButton" parent="Lobby/VBoxContainer/HBoxContainer3"]
margin_right = 362.0
margin_bottom = 188.0
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="CreateButton" type="TextureButton" parent="Lobby/VBoxContainer/HBoxContainer3"]
margin_left = 437.0
margin_right = 800.0
margin_bottom = 188.0
size_flags_horizontal = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Back" type="Button" parent="Lobby"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -460.0
margin_top = -168.0
margin_right = -100.0
margin_bottom = -100.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Enrere"

[node name="WaitTimer" type="Timer" parent="Lobby"]
wait_time = 10.0
one_shot = true

[node name="MultiplayerMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Label" type="Label" parent="MultiplayerMenu"]
margin_left = 122.0
margin_top = 80.0
margin_right = 1802.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_y = 5
text = "MULTIJUGADOR"
align = 1

[node name="Label2" type="Label" parent="MultiplayerMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -889.0
margin_top = -285.0
margin_right = 889.0
margin_bottom = -158.0
custom_fonts/font = ExtResource( 4 )
custom_constants/shadow_offset_y = 5
text = "PREM 'Z' EN EL TECLAT
O 'START' EN LA MANETA"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -159.87
margin_right = 315.0
margin_bottom = 470.13

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerMenu/HBoxContainer"]
margin_right = 313.0
margin_bottom = 630.0
size_flags_horizontal = 3

[node name="1Player" type="Label" parent="MultiplayerMenu/HBoxContainer/VBoxContainer"]
margin_right = 313.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1P"
align = 1
valign = 1

[node name="3Player" type="Label" parent="MultiplayerMenu/HBoxContainer/VBoxContainer"]
margin_top = 317.0
margin_right = 313.0
margin_bottom = 630.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3P"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MultiplayerMenu/HBoxContainer"]
margin_left = 317.0
margin_right = 630.0
margin_bottom = 630.0
size_flags_horizontal = 3

[node name="2Player" type="Label" parent="MultiplayerMenu/HBoxContainer/VBoxContainer2"]
margin_right = 313.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2P"
align = 1
valign = 1

[node name="4Player" type="Label" parent="MultiplayerMenu/HBoxContainer/VBoxContainer2"]
margin_top = 317.0
margin_right = 313.0
margin_bottom = 630.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4P"
align = 1
valign = 1

[node name="Play" type="Button" parent="MultiplayerMenu"]
margin_left = 1453.04
margin_top = 625.0
margin_right = 1766.04
margin_bottom = 713.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Local"

[node name="OnlinePlay" type="Button" parent="MultiplayerMenu"]
margin_left = 1453.04
margin_top = 750.0
margin_right = 1766.04
margin_bottom = 838.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "En línia"

[node name="Back" type="Button" parent="MultiplayerMenu"]
margin_left = 1453.04
margin_top = 875.0
margin_right = 1766.04
margin_bottom = 963.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Enrere"

[node name="SettingsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label3" type="Label" parent="SettingsMenu"]
margin_left = 120.149
margin_top = 80.0
margin_right = 1800.15
margin_bottom = 161.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_y = 5
text = "CONFIGURACIÓ"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -378.5
margin_top = -312.5
margin_right = 378.5
margin_bottom = 312.5
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/ScrollContainer"]
margin_right = 757.0
margin_bottom = 622.0
size_flags_horizontal = 3
custom_constants/separation = 75
script = ExtResource( 11 )

[node name="Graphics" type="VBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer"]
margin_right = 757.0
margin_bottom = 115.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics"]
margin_right = 757.0
margin_bottom = 29.0
text = "Qualitat gràfica"
align = 1

[node name="Buttons" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics"]
margin_top = 49.0
margin_right = 757.0
margin_bottom = 115.0
custom_constants/separation = 35

[node name="ButtonLow" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons"]
margin_right = 229.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "BAIXA"

[node name="ButtonMiddle" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons"]
margin_left = 264.0
margin_right = 493.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "MITJANA"

[node name="ButtonHigh" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons"]
margin_left = 528.0
margin_right = 757.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "ALTA"

[node name="Controls" type="VBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 757.0
margin_bottom = 359.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls"]
margin_right = 757.0
margin_bottom = 29.0
text = "Controls"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls"]
margin_top = 49.0
margin_right = 757.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls/HBoxContainer"]
margin_right = 376.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Sensibilitat del ratolí"
align = 1

[node name="Label2" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls/HBoxContainer"]
margin_left = 380.0
margin_right = 757.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Sensibilitat del joystick"
align = 1

[node name="Sliders" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls"]
margin_top = 98.0
margin_right = 757.0
margin_bottom = 114.0

[node name="HSliderMouse" type="HSlider" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls/Sliders"]
margin_right = 376.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 20.0
max_value = 150.0
value = 65.0
ticks_on_borders = true

[node name="HSliderJoystick" type="HSlider" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls/Sliders"]
margin_left = 380.0
margin_right = 757.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 20.0
max_value = 150.0
value = 60.0
ticks_on_borders = true

[node name="SensitivityDefaultsButton" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Controls"]
margin_top = 134.0
margin_right = 757.0
margin_bottom = 169.0
text = "RESTAURAR LA CONFIGURACIÓ PREDETERMINADA"

[node name="Gameplay" type="VBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer"]
margin_top = 434.0
margin_right = 757.0
margin_bottom = 622.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay"]
margin_right = 757.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Joc"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay"]
margin_top = 49.0
margin_right = 757.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer"]
margin_right = 376.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Camp de visió"
align = 1

[node name="Label2" type="Label" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer"]
margin_left = 380.0
margin_right = 757.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Tropes per equip"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay"]
margin_top = 98.0
margin_right = 757.0
margin_bottom = 133.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBoxFov" type="SpinBox" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer2"]
margin_left = 141.0
margin_right = 235.0
margin_bottom = 35.0
size_flags_horizontal = 6
min_value = 45.0
max_value = 110.0
value = 70.0
align = 1

[node name="SpinBoxTroops" type="SpinBox" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer2"]
margin_left = 521.0
margin_right = 615.0
margin_bottom = 35.0
size_flags_horizontal = 6
min_value = 8.0
max_value = 64.0
value = 16.0
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay"]
margin_top = 153.0
margin_right = 757.0
margin_bottom = 188.0

[node name="FovDefaultsButton" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer3"]
margin_right = 376.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "RESTAURAR"

[node name="TroopsDefaultsButton" type="Button" parent="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer3"]
margin_left = 380.0
margin_right = 757.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "RESTAURAR"

[node name="Back" type="Button" parent="SettingsMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -460.0
margin_top = -168.0
margin_right = -100.0
margin_bottom = -100.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Enrere"

[node name="LoadingScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SinglePlayer" type="Label" parent="LoadingScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -586.0
margin_top = -42.0
margin_right = 586.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "CARREGANT EL MODE CONQUESTA..."

[node name="Multiplayer" type="Label" parent="LoadingScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -455.0
margin_top = -42.0
margin_right = 455.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "CONNECTANT A LA XARXA..."

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -429.0
margin_right = 175.0
margin_bottom = -400.0
[connection signal="finished_loading" from="." to="Lobby" method="_on_TitleScreen_finished_loading"]
[connection signal="pressed" from="Menu/Buttons/SinglePlayer" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Buttons/HBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="Menu/Buttons/HBoxContainer/OnlinePlay" to="." method="_on_OnlinePlay_pressed"]
[connection signal="pressed" from="Menu/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="text_changed" from="Lobby/VBoxContainer/HBoxContainer/NameLine" to="Lobby" method="_on_NameLine_text_changed"]
[connection signal="text_changed" from="Lobby/VBoxContainer/HBoxContainer2/IPLine" to="Lobby" method="_on_IPLine_text_changed"]
[connection signal="pressed" from="Lobby/VBoxContainer/HBoxContainer3/JoinButton" to="Lobby" method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Lobby/VBoxContainer/HBoxContainer3/CreateButton" to="Lobby" method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Lobby/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Lobby/Back" to="." method="_on_MultiplayerBack_pressed"]
[connection signal="timeout" from="Lobby/WaitTimer" to="Lobby" method="_on_WaitTimer_timeout"]
[connection signal="pressed" from="MultiplayerMenu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MultiplayerMenu/OnlinePlay" to="." method="_on_OnlinePlay_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Back" to="." method="_on_MultiplayerBack_pressed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons/ButtonLow" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_GraphicsButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons/ButtonMiddle" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_GraphicsButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Graphics/Buttons/ButtonHigh" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_GraphicsButton_pressed" binds= [ 2 ]]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/VBoxContainer/Controls/Sliders/HSliderMouse" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_HSliderMouse_value_changed"]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/VBoxContainer/Controls/Sliders/HSliderJoystick" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_HSliderJoystick_value_changed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Controls/SensitivityDefaultsButton" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_SensitivityDefaultsButton_pressed"]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer2/SpinBoxFov" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_SpinBoxFov_value_changed"]
[connection signal="value_changed" from="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer2/SpinBoxTroops" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_SpinBoxTroops_value_changed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer3/FovDefaultsButton" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_FovDefaultsButton_pressed"]
[connection signal="pressed" from="SettingsMenu/ScrollContainer/VBoxContainer/Gameplay/HBoxContainer3/TroopsDefaultsButton" to="SettingsMenu/ScrollContainer/VBoxContainer" method="_on_TroopsDefaultsButton_pressed"]
[connection signal="pressed" from="SettingsMenu/Back" to="." method="_on_Back_pressed"]
